--- a/main.ipynb
+++ b/main.ipynb
@@ -265,18 +265,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 68,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "array([[0, 0, 1, 0, 2, 1, 0, 0, 1, 2, 0, 1, 0, 0, 3]])"
+     },
+     "metadata": {},
+     "execution_count": 68
+    }
+   ],
    "source": [
-    "pred = model.predict(np.array([to_pred]))"
+    "pred = np.argmax(model.predict(np.array([to_pred])), axis=-1)\n",
+    "pred\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 69,
    "metadata": {
     "tags": []
    },
@@ -290,7 +300,7 @@
    "source": [
     "num=0\n",
     "\n",
-    "for val in [np.argmax(i) for i in pred[0]]:\n",
+    "for val in pred[0]:\n",
     "    num+=1\n",
     "    if val == 0:\n",
     "        print(num)\n",
